syntax = "proto3";

package  broker;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/alexandrecolauto/gofka/proto/broker";

service IntraBrokerService{
    rpc FetchRecords(FetchRecordsRequest) returns (FetchRecordsResponse);
    rpc UpdateFollowerState(UpdateFollowerStateRequest) returns (UpdateFollowerStateResponse);
}

message FetchRecordsRequest {
    string brokerId = 1;
    string topic = 2;
    int32 partition = 3;
    int64 offset = 4;
    int32 maxBytes = 5;
}

message FetchRecordsResponse {
    repeated Message message = 1;
	int64 highwatermark = 2;
	int64 longendoffset = 3;
    bool success = 4;
    string error_message = 5;
}

message Message  {
    string key = 1;
    string value = 2;
    google.protobuf.Timestamp timestamp    = 3;
    string topic = 4;
    int32 partition = 5;
    int64 offset = 6;
    map<string, bytes> headers = 7;
}

message UpdateFollowerStateRequest {
    string brokerId = 1;
    string topic = 2;
    int32 partition = 3;
    string followerId = 4;
    int64 fetchOffset = 5;
    int64 longEndOffset = 6;
}

message UpdateFollowerStateResponse {
    bool success = 1;
    string error_message = 2;
}
